--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GifTastic</title>
+    <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,22 +23,12 @@
             <div class="row">
                 <form id="frm" class="m-auto">
                     <div class="form-row">
-                        <div class="form-group col-md-3">
-                            <label for="categoryId">&nbsp;</label>
-                            <select id="categoryId" class="form-control">
-                                <option value="cartoon" selected>Cartoon</option>
-                                <option value="movie">Movie</option>
-                            </select>
+                        <div class="form-group col-md-6">
+                            <label for="nameId">Enter your name</label>
+                            <input type="text" class="form-control" id="nameId" placeholder="">
                         </div>
-                        <div class="form-group col-md-4">
-                            <label for="nameId">&nbsp;</label>
-                            <input type="text" class="form-control" id="nameId" placeholder="Add Cartoon/Movie">
-                        </div>
-                        <div class="col-md-2" style="margin-top:35px;">
+                        <div class="col-md-6" style="margin-top:35px;">
                             <button id="btnSubmit" class="btn btn-primary">Submit</button>
-                        </div>
-                        <div class="col-md-3" style="margin-top:35px;">
-                            <button id="btnFav" class="btn btn-light">My Favourites</button>
                         </div>
                     </div>
                 </form>
@@ -55,7 +45,7 @@
             </div>
         </div>
     </main>
-
+    <span id="connected-viewers"></span>
     <footer id="sticky-footer" class="py-3 footer">
         <div class="container text-center">
             <small>Copyright @
