--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 
 <body class="d-flex flex-column">
     <main id="main-content">
-        <div class="container-fluid">
-            <div class="row">
+        <div class="container">
+            <!--div class="col-xs-12 pre-connection">
+                Connecting...
+            </div-->
+
+            <div class="row pre-login">
                 <form id="frm" class="m-auto">
                     <div class="form-row">
                         <div class="form-group col-md-6">
@@ -32,18 +36,76 @@
                         </div>
                     </div>
                 </form>
-            </div>
 
-            <!-- Topic Div or Fav Movies Div-->
-            <div class="row">
-                <div id="topic_div" class="col-12 mt-3"></div>
-            </div>
 
-            <!-- Images Div -->
-            <div class="row">
-                <div id="images_div" class="col-12"></div>
+                <div class="col-xs-12 post-login">
+                    <h2>Hi,
+                        <span id="player-name-display"></span>! You are player
+                        <span id="player-number"></span>.
+                    </h2>
+                </div>
+                <div class="col-xs-12 pending-login">
+                    There are already 2 players playing, you can play when one player quits.
+                </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-4 player">
+                    <h3 id="player-1">Waiting for Player 1</h3>
+                    <p class="stats p1-stats">
+                        <strong>Wins:</strong>
+                        <span id="p1-wins">0</span>
+                        <strong>Losses:</strong>
+                        <span id="p1-losses"></span>
+                    </p>
+                    <p class="selections p1-selections">
+                        <button id="rock" data-player="1" class="btn btn-default choice">Rock</button>
+                        <button id="paper" data-player="1" class="btn btn-default choice">Paper</button>
+                        <button id="scissors" data-player="1" class="btn btn-default choice">Scissors</button>
+                    </p>
+                    <p class="no-choice p1-no-choice">
+                        Pending Selection
+                    </p>
+                    <p class="choice-made p1-choice-made">
+                        Selection Made
+                    </p>
+                    <p class="choice-reveal p1-choice-reveal">
+
+                    </p>
+                </div>
+
+                <div class="col-4">
+                    <h3 id="feedback"></h3>
+                </div>
+
+                <div class="col-4 player">
+                    <h3 id="player-2">Waiting for Player 2</h3>
+                    <p class="stats p2-stats">
+                        <strong>Wins:</strong>
+                        <span id="p2-wins">0</span>
+                        <strong>Losses:</strong>
+                        <span id="p2-losses"></span>
+                    </p>
+                    <p class="selections p2-selections">
+                        <button id="rock" data-player="2" class="btn btn-default choice">Rock</button>
+                        <button id="paper" data-player="2" class="btn btn-default choice">Paper</button>
+                        <button id="scissors" data-player="2" class="btn btn-default choice">Scissors</button>
+                    </p>
+                    <p class="no-choice p2-no-choice">
+                        Pending Selection
+                    </p>
+                    <p class="choice-made p2-choice-made">
+                        Selection Made
+                    </p>
+                    <p class="choice-reveal p2-choice-reveal">
+
+                    </p>
+                </div>
+                <!-- Topic Div or Fav Movies Div-->
+                <!--div class="row">
+                <div id="player_id1" class="col-6 mt-3">Waiting for player 1</div>
+                <div id="player_id2" class="col-6 mt-3">Waiting for player 2</div>
+            </div-->
+            </div>
     </main>
     <span id="connected-viewers"></span>
     <footer id="sticky-footer" class="py-3 footer">
