changed logic to display player names on screen to show db values so that the name is not shown when connection lost

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     </div>
                 </form>
 
-
+            </div>
+            <div>
                 <div class="col-xs-12 post-login">
                     <h2>Hi,
                         <span id="player-name-display"></span>! You are player
