--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="col-4">
-                    <h3 id="feedback"></h3>
+                    <h3 id="results"></h3>
                 </div>
 
                 <div class="col-4 player">
