uploaded working functionality of rps game

--- a/index.html
+++ b/index.html
@@ -101,6 +101,27 @@
 
                     </p>
                 </div>
+
+                <div class="row post-login">
+                    <div class="col-xs-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title text-left">Chat</h3>
+                            </div>
+                            <ul id="chat-log" class="list-unstyled text-left">
+
+                            </ul>
+                            <form role="chat" class="panel-footer">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="chat">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" id="chat-btn" type="submit">Send</button>
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
                 <!-- Topic Div or Fav Movies Div-->
                 <!--div class="row">
                 <div id="player_id1" class="col-6 mt-3">Waiting for player 1</div>
