added chat feature to save in database and retrieve the chat

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <div class="input-group">
                                     <input type="text" class="form-control" id="chat">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-default" id="chat-btn" type="submit">Send</button>
+                                        <button class="btn btn-default" id="chat-btn">Send</button>
                                     </span>
                                 </div>
                             </form>
