Added validation for input text

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <label for="nameId" class="sr-only">Enter your name</label>
                         <input type="text" class="form-control" id="nameId" placeholder="Enter your name"
                             autocomplete="off">
+                        <div class="error"></div>
                     </div>
                     <button id="btnSubmit" type="submit" class="btn btn-warning mb-2">Submit</button>
                 </form>
