Added comments in code

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     </header>
     <main id="main-content">
         <div class="container page-content">
+            <!-- Div to show message if there are more than 2 connections-->
             <div id="connected-viewers" role="alert"></div>
 
+            <!-- Form to enter name -->
             <div class="row pre-login">
                 <form class="form-inline m-auto p-3">
                     <div class="form-group mx-sm-3 mb-2">
@@ -42,6 +44,7 @@
                 </form>
 
             </div>
+            <!-- welcome message -->
             <div>
                 <div class="col-12 post-login">
                     <h2>Hi,
@@ -50,6 +53,8 @@
                     </h2>
                 </div>
             </div>
+
+            <!-- player 1 section -->
             <div class="row">
                 <div class="col-4 player">
                     <div class="card bg-light border-warning m-2 player-box">
@@ -79,10 +84,12 @@
                     </div>
                 </div>
 
+                <!-- section to show results -->
                 <div class="col-4">
                     <div id="results" role="alert"></div>
                 </div>
 
+                <!-- player 2 section -->
                 <div class="col-4 player">
                     <div class="card bg-light border-warning m-2 player-box">
                         <div class="card-header bg-warning border-warning text-left">
@@ -111,6 +118,7 @@
                     </div>
                 </div>
 
+                <!-- section to show the chat -->
                 <div class="row post-login">
                     <div class="card bg-light mb-3 border-warning chat-box">
                         <div class="card-header text-left chat-header">
